# sam2

./: .gitignore  README.md  pyproject.toml  setup.py
checkpoints/: download_ckpts.sh
sam2/: build_sam.py
