[project]
name = "sam2_fork"
version = "1.4"
description = "Fork of SAM 2: Segment Anything in Images and Videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "torch>=2.3.1",
    "torchvision>=0.18.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
]
license = { text = "Apache 2.0" }
authors = [
    { name = "Ilona Kovaleva", email = "iloncka.ds@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/iloncka-ds/sam2"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "configs/**/*.yaml", "configs/**/*.yml"]

[build-system]
requires = [
    "setuptools>=61.0",
    "torch>=2.3.1",
    ]
build-backend = "setuptools.build_meta"
